# simulation_rmp_1

./: package.xml  setup.cfg  setup.py
Data_analysis/simulation_1000_1/: simulation_analysis_report_20251006_094651.csv
Data_analysis/simulation_1000_2/: simulation_analysis_report_20251020_100610.csv  simulation_failures_only_234_20251020_100610.csv  simulation_summary_952_20251020_100609.csv
launch/: run_suite.py  simulation_cartesian_launch.py  simulation_rmp_launch.py  single_simulation_rmp_launch.py
scripts/: 3D_trajectory.py  analysis_simulations.py  analysis_simulations_cartesian.py  analysis_simulations_rmp.py  plot_analysis_simulation.py  plot_distance_data.py  plot_distance_to_goal_pose.py
simulation_rmp/: evaluation_manager_rmp.py  run_suite.sh  single_simulation_evaluation_manager_rmp.py
simulation_rmp_1/: evaluation_manager_cartesian.py  evaluation_manager_rmp.py  output.txt  run_suite.sh  run_suite_cartesian.sh  single_simulation_evaluation_manager_rmp.py  target_visualizer.py
